--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
 </head>
 
 <body>
-
     <section class="text-blueGray-700 mysec">
         <div class="container flex flex-col px-5 py-24 mx-auto lg:items-center">
             <div class="flex flex-col w-full mb-12 text-left lg:text-center">
                 <h2 class="mb-4 text-xs font-semibold tracking-widest text-black uppercase title-font">Thanks For being here !</h2>
-                <h1 class="mb-6 text-2xl font-semibold tracking-tighter text-black sm:text-5xl title-font"> A centered <br class="md:hidden"> medium length headline. </h1>
-                <p class="mx-auto text-base font-medium leading-relaxed text-blueGray-700 lg:w-2/3">You're about to launch soon and must be 100% focused on your product. Don't loose precious days designing, coding the landing page and testing . </p>
+                <h1 class="mb-6 text-2xl font-semibold tracking-tighter text-black sm:text-5xl title-font"> Welcome to the World of <br class="md:hidden"> HindiToons</h1>
+                <p class="mx-auto text-base font-medium leading-relaxed text-blueGray-700 lg:w-2/3">A Place Where You Get Latest Animes And Toons For Free</p>
             </div>
             <div class="flex justify-left lg:justify-center ">
-                <button class="flex items-center px-6 py-2 mt-auto mr-3 font-semibold text-blue-800 transition duration-500 ease-in-out transform bg-blue-100 rounded-lg hover:bg-blue-200 focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2">Button</button>
-                <button class="flex items-center px-6 py-2 mt-auto font-semibold text-white transition duration-500 ease-in-out transform bg-blue-600 rounded-lg hover:bg-blue-700 focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2">Button</button>
+                <button class="flex items-center px-6 py-2 mt-auto mr-3 font-semibold text-blue-800 transition duration-500 ease-in-out transform bg-blue-100 rounded-lg hover:bg-blue-200 focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2"><a href="https://www.hinditoons.in/">Website</a></button>
+                <button class="flex items-center px-6 py-2 mt-auto font-semibold text-white transition duration-500 ease-in-out transform bg-blue-600 rounded-lg hover:bg-blue-700 focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2"><a href="https://telegram.dog/hinditoons4u">Telegram</a></button>
             </div>
         </div>
     </section>
