--- a/index.html
+++ b/index.html
@@ -7,9 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stream : HindiToons All Toons and Animes Free Download</title>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/index.css">
     <script async src="https://arc.io/widget.min.js#d9Qgz9LC"></script>
+<style>
+    * {
+    padding: 0%;
+    margin: 0ch;
+}
 
+body {
+    background-image: url('/images/HomeBg.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-color: bisque;
+}
+
+.myheroimg {
+    box-shadow: 3px;
+}
+
+    </style>
 </head>
 
 <body>
