--- a/play.html
+++ b/play.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.plyr.io/3.6.8/plyr.css" />
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/play.css">
+    <script async src="https://arc.io/widget.min.js#d9Qgz9LC"></script>
 </head>
 
 <body>
