--- a/index.html
+++ b/index.html
@@ -5,51 +5,79 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stream : HindiToons All Toons and Animes Free Download</title>
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <title>Files : HindiToons</title>
+    <link rel="stylesheet" href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css">
     <script async src="https://arc.io/widget.min.js#d9Qgz9LC"></script>
-<style>
-    * {
-    padding: 0%;
-    margin: 0ch;
-}
 
-body {
-    background-image: url('/images/HomeBg.jpg');
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    background-attachment: fixed;
-    background-color: bisque;
-}
-
-.myheroimg {
-    box-shadow: 3px;
-}
-
-    </style>
 </head>
 
 <body>
-    <section class="text-blueGray-700 mysec">
-        <div class="container flex flex-col px-5 py-24 mx-auto lg:items-center">
-            <div class="flex flex-col w-full mb-12 text-left lg:text-center">
-                <h2 class="mb-4 text-xs font-semibold tracking-widest text-black uppercase title-font">Thanks For being here !</h2>
-                <h1 class="mb-6 text-2xl font-semibold tracking-tighter text-black sm:text-5xl title-font"> Welcome to the World of <br class="md:hidden"> HindiToons</h1>
-                <p class="mx-auto text-base font-medium leading-relaxed text-blueGray-700 lg:w-2/3">A Place Where You Get Latest Animes And Toons For Free</p>
-            </div>
-            <div class="flex justify-left lg:justify-center ">
-                <button class="flex items-center px-6 py-2 mt-auto mr-3 font-semibold text-blue-800 transition duration-500 ease-in-out transform bg-blue-100 rounded-lg hover:bg-blue-200 focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2"><a href="https://www.hinditoons.in/">Website</a></button>
-                <button class="flex items-center px-6 py-2 mt-auto font-semibold text-white transition duration-500 ease-in-out transform bg-blue-600 rounded-lg hover:bg-blue-700 focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2"><a href="https://telegram.dog/hinditoons4u">Telegram</a></button>
+    <header class="text-gray-600 body-font">
+        <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+            <nav class="flex lg:w-2/5 flex-wrap items-center text-base md:ml-auto">
+                <a class="mr-5 hover:text-gray-900">Trends</a>
+                <a class="mr-5 hover:text-gray-900">Latest</a>
+                <a class="mr-5 hover:text-gray-900">Must Watch</a>
+                <a class="hover:text-gray-900">My</a>
+            </nav>
+            <a class="flex order-first lg:order-none lg:w-1/5 title-font font-medium items-center text-gray-900 lg:items-center lg:justify-center mb-4 md:mb-0">
+                </svg>
+                <span class="ml-3 text-xl">Files : HindiToons</span>
+            </a>
+            <div class="lg:w-2/5 inline-flex lg:justify-end ml-5 lg:ml-0">
+                <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Visit HindiToons
+              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+                <path d="M5 12h14M12 5l7 7-7 7"></path>
+              </svg>
+            </button>
             </div>
         </div>
-    </section>
-    <section id="intro" class="mysec">
-        <div class="container flex flex-col items-center justify-center px-10 pb-24 mx-auto rounded-lg lg:-mt-12 lg:px-40">
-            <img class="myheroimg object-cover object-center w-full shadow-xl rounded-xl" alt="hero" src="/images/HomeBg.jpg">
-        </div>
+    </header>
+
+    <section class="text-gray-600 body-font">
+        <iframe data-aa="1774741" src="//acceptable.a-ads.com/1774741" style="border:0px; padding:0; width:100%; height:100%; overflow:hidden; background-color: transparent;"></iframe>
     </section>
 
+
+    <div class="container items-center px-5 py-12 lg:px-20">
+        <div class="flex flex-wrap ">
+            <div class="w-full mx-auto my-4 bg-white border rounded-lg shadow-xl lg:w-1/4">
+                <div class="p-6">
+                    <h2 class="mb-8 text-xs font-semibold tracking-widest text-black uppercase title-font"> Your File Is Ready</h2>
+                    <h4 class="mb-8 text-2xl font-semibold leading-none tracking-tighter text-black lg:text-3xl title-font "> Note</h4>
+                    <p class="mb-3 text-base leading-relaxed text-blueGray-500"> Must Join Our Telegram For Latest Updates and Much More .... </p>
+                    <p></p>
+                    <div class="flex flex-wrap justify-between">
+                        <button class="w-full px-16 py-2 my-2 text-base font-medium text-blueGray-600 transition duration-500 ease-in-out transform rounded-md border-blueGray-50 bg-blueGray-50 focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:bg-blueGray-100"> Join Telegram </button>
+                        <button class="w-full px-16 py-2 my-2 text-base font-medium text-white transition duration-500 ease-in-out transform border-black rounded-md bg-black focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:bg-blueGray-900"
+                            onclick="download()">Download </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <section class="text-gray-600 body-font">
+        <iframe data-aa="1774741" src="//acceptable.a-ads.com/1774741" style="border:0px; padding:0; width:100%; height:100%; overflow:hidden; background-color: transparent;"></iframe>
+    </section>
+
+    <footer class="text-gray-600 body-font">
+        <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
+            <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
+
+                <span class="ml-3 text-xl">HindiToons Stream</span>
+            </a>
+            <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2020 HindiToons Stream —
+                <a href="https://www.hinditoons.in" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@HindiToons</a>
+            </p>
+        </div>
+    </footer>
+    <script>
+var _0x630f=["\x3F\x69\x64\x3D","","\x72\x65\x70\x6C\x61\x63\x65","\x73\x65\x61\x72\x63\x68","\x6C\x6F\x63\x61\x74\x69\x6F\x6E","\x46\x69\x6C\x65\x73\x20\x48\x69\x6E\x64\x69\x54\x6F\x6F\x6E\x73","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x66\x69\x6C\x65\x73\x2E\x68\x69\x6E\x64\x69\x74\x6F\x6F\x6E\x73\x2E\x69\x6E\x2F","\x70\x75\x73\x68\x53\x74\x61\x74\x65","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x6D\x78\x73\x74\x72\x65\x61\x6D\x65\x72\x2E\x68\x65\x72\x6F\x6B\x75\x61\x70\x70\x2E\x63\x6F\x6D\x2F","\x5F\x73\x65\x6C\x66","\x6F\x70\x65\x6E"];var id=window[_0x630f[4]][_0x630f[3]][_0x630f[2]](_0x630f[0],_0x630f[1]);history[_0x630f[7]](_0x630f[5],_0x630f[5],_0x630f[6]);function download(){const _0x428ex3=id;window[_0x630f[10]](_0x630f[8]+ _0x428ex3,_0x630f[9])}
+    </script>
 </body>
 
 </html>
