--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ function download(){
         window[_0xe39c[8]](nnurl,_0xe39c[7])
     else :
         window[_0xe39c[8]](nurl,_0xe39c[7])}
-
+   </script>
 </body>
 
 </html>
