--- a/index.html
+++ b/index.html
@@ -78,7 +78,12 @@
     <script src="/blowfish.js"></script>
 
     <script>
-var _0xe39c=["\x73\x65\x61\x72\x63\x68","\x6C\x6F\x63\x61\x74\x69\x6F\x6E","\x3F\x69\x64\x3D","","\x72\x65\x70\x6C\x61\x63\x65","\x48\x69\x6E\x64\x69\x40\x54\x6F\x6F\x6E\x73\x40\x31\x32\x33\x23\x21","\x64\x65\x63\x72\x79\x70\x74","\x5F\x73\x65\x6C\x66","\x6F\x70\x65\x6E"];var id=window[_0xe39c[1]][_0xe39c[0]];var nid=id[_0xe39c[4]](_0xe39c[2],_0xe39c[3]);const nurl=blowfish[_0xe39c[6]](nid,_0xe39c[5],{cipherMode:0,outputType:0});function download(){window[_0xe39c[8]](nurl,_0xe39c[7])}
+var _0xe39c=["\x73\x65\x61\x72\x63\x68","\x6C\x6F\x63\x61\x74\x69\x6F\x6E","\x3F\x69\x64\x3D","","\x72\x65\x70\x6C\x61\x63\x65","\x48\x69\x6E\x64\x69\x40\x54\x6F\x6F\x6E\x73\x40\x31\x32\x33\x23\x21","\x64\x65\x63\x72\x79\x70\x74","\x5F\x73\x65\x6C\x66","\x6F\x70\x65\x6E"];var id=window[_0xe39c[1]][_0xe39c[0]];var nid=id[_0xe39c[4]](_0xe39c[2],_0xe39c[3]);const nurl=blowfish[_0xe39c[6]](nid,_0xe39c[5],{cipherMode:0,outputType:0});
+if nurl.includes('fxstream') :
+    nnurl = nurl.replace('fxstream','thestreamx')
+    function download(){window[_0xe39c[8]](nnurl,_0xe39c[7])}
+else :
+    function download(){window[_0xe39c[8]](nurl,_0xe39c[7])}
     </script>
 </body>
 
