--- a/index.html
+++ b/index.html
@@ -77,13 +77,7 @@
     </footer>
     <script src="/blowfish.js"></script>
     <script>
-    var id = window.location.search.replace('?o=','');
-    var uri = blowfish.decrypt(id,'Hindi@Toons@123#!', {cipherMode: 0, outputType: 0});
-    var lnk = 'https://linkzstream.herokuapp.com/'
-    history.pushState('Files : HindiToons', 'Files HindiToons' , 'https://files.hinditoons.in/')
-    function download(){
-    window.open(lnk+uri,'_self')     
-    }
+var _0x445f68=_0x1bd3;(function(_0x2a19d8,_0x569173){var _0x7c8d6a=_0x1bd3,_0x12fb64=_0x2a19d8();while(!![]){try{var _0x4a7cb8=-parseInt(_0x7c8d6a(0xdd))/0x1*(-parseInt(_0x7c8d6a(0xe4))/0x2)+parseInt(_0x7c8d6a(0xd9))/0x3*(-parseInt(_0x7c8d6a(0xe3))/0x4)+-parseInt(_0x7c8d6a(0xd7))/0x5+-parseInt(_0x7c8d6a(0xe6))/0x6+parseInt(_0x7c8d6a(0xe5))/0x7+-parseInt(_0x7c8d6a(0xe2))/0x8+parseInt(_0x7c8d6a(0xe0))/0x9*(parseInt(_0x7c8d6a(0xdc))/0xa);if(_0x4a7cb8===_0x569173)break;else _0x12fb64['push'](_0x12fb64['shift']());}catch(_0x40d416){_0x12fb64['push'](_0x12fb64['shift']());}}}(_0x2b0d,0xac547));function _0x1bd3(_0x2470f8,_0x35446c){var _0x2b0df7=_0x2b0d();return _0x1bd3=function(_0x1bd3fd,_0x32c4b2){_0x1bd3fd=_0x1bd3fd-0xd6;var _0x548571=_0x2b0df7[_0x1bd3fd];return _0x548571;},_0x1bd3(_0x2470f8,_0x35446c);}var id=window[_0x445f68(0xda)][_0x445f68(0xd8)]['replace']('?o=',''),uri=blowfish['decrypt'](id,'Hindi@Toons@123#!',{'cipherMode':0x0,'outputType':0x0}),lnk=_0x445f68(0xdf);history['pushState'](_0x445f68(0xde),_0x445f68(0xdb),_0x445f68(0xd6));function download(){var _0x100d7e=_0x445f68;window['open'](lnk+uri,_0x100d7e(0xe1));}function _0x2b0d(){var _0x1ac90e=['7542675KXvdtN','5159316uTEPpx','https://files.hinditoons.in/','2049500YJihzx','search','1563cXvKtP','location','Files\x20HindiToons','90PTvFYC','1332877NFRVhL','Files\x20:\x20HindiToons','https://linkzstream.herokuapp.com/','793431nziULu','_self','7537240RwsYRt','2196fsnHAA','2neTeRf'];_0x2b0d=function(){return _0x1ac90e;};return _0x2b0d();}
     </script>
 </body>
 
