--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 
     <script>
         var id = window.location.search;
-        var nid = id.replace('?id=', '')
+        var nid2 = id.replace('?id=', '')
+        var nid = nid.replaceAll('%20','+')
         const nurl = blowfish.decrypt(nid, 'Hindi@Toons@123#!', {
             cipherMode: 0,
             outputType: 0
